Proper fix for scrollbar on windows

--- a/src/components/layout/Navigation.css
+++ b/src/components/layout/Navigation.css
@@ -1,6 +1,6 @@
 .nav {
     background: #151515;
-    overflow: none;
+    overflow: hidden;
     height: 100vh;
     min-width: 200px;
     max-width: 20%;
